# Mailing

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-compose_web_celery.yml  pyproject.toml
notifications/app_notifications/: admin.py  api.py  apps.py  base.py  helpers.py  models.py  senders.py  tasks.py  views.py
notifications/app_notifications/migrations/: 0001_initial.py  0002_auto_20221124_1324.py
notifications/notifications/: __init__.py  celeryapp.py  settings.py  urls.py
notifications/sdk/: apps.py  models.py
